@@ -4,9 +4,11 @@ package project.lmsback.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 import project.lmsback.domain.*;
 import project.lmsback.repository.*;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -66,13 +68,20 @@ public class MyCourserServiceImpl implements MyCourserService {
                     dto.setOrderName(content.getOrderName());
                     dto.setYoutubeVideoId(content.getYoutubeVideoId());
                     dto.setVideoDuration(content.getVideoDuration());
+
+                    // 파일 정보 추가
+                    if (content.getFile() != null) {
+                        dto.setFileId(content.getFile().getFileId());
+                        dto.setFileName(content.getFile().getFileName());
+                    }
+
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<AssignmentDTO> getAssignmentsBulectureId(Integer lectureId) {
+    public List<AssignmentDTO> getAssignmentsByLectureId(Integer lectureId) {
         return lectureAssignmentRepository.findByLecture_LectureId(lectureId).stream()
                 .map(assignment -> {
                     AssignmentDTO dto = new AssignmentDTO();
@@ -107,6 +116,45 @@ public class MyCourserServiceImpl implements MyCourserService {
         return dto;
     }
 
+    @Override
+    public AssignmentDTO getAssignmentByWeekId(Integer weekId) {
+        LectureAssignment assignment = lectureAssignmentRepository.findByWeek_WeekId(weekId)
+                .orElseThrow(() -> new RuntimeException("해당 주차의 과제가 존재하지 않습니다."));
+
+        AssignmentDTO dto = new AssignmentDTO();
+        dto.setAssignmentId(assignment.getAssignmentId());
+        dto.setTitle(assignment.getTitle());
+        dto.setDescription(assignment.getDescription());
+        dto.setStartDatetime(assignment.getStartDatetime());
+        dto.setEndDatetime(assignment.getEndDatetime());
+        return dto;
+    }
+
+    @Override
+    public void saveAssignmentSubmit(MultipartFile file, Integer lectureId, Integer weekId, Integer stdtId) {
+
+
+        // 과제 엔티티 찾기
+        LectureAssignment assignment = lectureAssignmentRepository.findByWeek_WeekId(weekId)
+                .orElseThrow(() -> new RuntimeException("해당 주차의 과제가 없습니다."));
+
+        // 더미 파일 저장 처리 (DB에 저장된 FILE_ID 예시 사용)
+        File dummyFile = new File();
+        dummyFile.setFileId(1); // 실제 저장 로직은 따로 필요
+        dummyFile.setFileName(file.getOriginalFilename());
+        dummyFile.setFileSize((int) file.getSize());
+
+        // 제출 엔티티 생성
+        AssignmentSubmit submit = new AssignmentSubmit();
+        submit.setAssignment(assignment);
+        submit.setLecture(new LectureInfo(lectureId));
+        submit.setFile(dummyFile);
+        submit.setSubmissionType("온라인");
+        submit.setSubmissionDate(LocalDateTime.now().toString());
+        submit.setScore(null); // 아직 미채점
+
+        assignmentSubmitRepository.save(submit);
+    }
 }
 
 
